c/examples/writing-a-c-compiler-tests/tests/chapter_8/valid/while.c
int main(void) {
    int a = 0;

    while (a < 5)
        a = a + 2;

    return a;
}
