c/examples/writing-a-c-compiler-tests/tests/chapter_8/invalid_parse/extra_credit/switch_no_condition.c
int main(void) {
    switch {
        return 0;
    }
}